# Next-Gen-Digital-Solutions-

./: app.py  config.py  db.py  init_db.py  paytm_checksum.py  pyproject.toml  replit.md
attached_assets/: Pasted--1-CORE-PLATFORM-VISION-software-sirf-auto-showroom-ALL_1765709870706.txt
instance/: saas_platform.db
routes/: api.py  auth.py  card.py  company.py  master.py  payment.py  public.py  sales.py
static/css/: style.css
static/js/: main.js
templates/: base.html
templates/auth/: forgot_password.html  login.html  register.html
templates/card/: action_result.html  view.html
templates/company/: add_sales_person.html  branding.html  cards.html  create_card.html  dashboard.html  edit_card.html  edit_sales_person.html  leads.html  plan.html  sales_persons.html  view_lead.html  website_settings.html
templates/errors/: 403.html  404.html  500.html
templates/master/: add_showcase.html  analytics.html  api_keys.html  companies.html  create_company.html  dashboard.html  edit_company.html  leads.html  payments.html  profile.html  settings.html  showcase.html  view_company.html
templates/partials/: footer.html  navbar.html
templates/payment/: failed.html  invoice.html  redirect.html  success.html
templates/public/: about.html  features.html  home.html  privacy.html  showcase.html  terms.html
templates/public/company/: about.html  contact.html  features.html  home.html  pricing.html  privacy.html  terms.html
templates/sales/: call_history.html  dashboard.html  follow_ups.html  leads.html  my_cards.html  notifications.html  profile.html  view_lead.html
